# AIGameEngine

./: .gitignore  CHAPTERS.md  CMakeLists.txt  CONTRIBUTING.md  EXISTING_RESOURCES.md  LICENSE  PHASE1_INSTRUCTION.md  PHASES.md  README.md
data/: CREDITS.md
engine/command/: AIContext.cpp  AIContext.h  CommandParser.cpp  CommandParser.h  CommandRegistry.cpp  CommandRegistry.h
engine/core/: App.cpp  App.h  ECS.cpp  ECS.h  Input.cpp  Input.h  Math.cpp  Math.h  ResourceManager.cpp  ResourceManager.h  Time.cpp  Time.h  Window.cpp  Window.h
engine/render/: Camera2D.cpp  Camera2D.h  Camera3D.cpp  Camera3D.h  Framebuffer.cpp  Framebuffer.h  Light.h  Material.h  Mesh.cpp  Mesh.h  ParticleSystem.cpp  ParticleSystem.h  PostProcess.cpp  PostProcess.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  SpriteAnimation.cpp  SpriteAnimation.h  SpriteBatcher.cpp  SpriteBatcher.h  SpriteSheet.cpp  SpriteSheet.h  Texture.cpp  Texture.h  Tilemap.cpp  Tilemap.h
examples/01_hello_window/: README.md  main.cpp
examples/02_ecs_demo/: README.md  main.cpp
examples/03_command_demo/: README.md  main.cpp
examples/04_2d_sprite_batcher/: README.md  main.cpp
examples/05_2d_animation_particles_tilemap/: README.md  main.cpp
examples/06_2d_lighting_postfx/: README.md  main.cpp
examples/07_3d_mesh_camera/: README.md  main.cpp
examples/08_pbr_materials_lighting/: README.md  main.cpp
examples/09_skybox_ibl_tonemap/: README.md  main.cpp
